--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
             </div>
           </li>
           <li>
-            <button type="button" class="button">Nuevo Chat</button>
+            <div class="button-container">
+              <button type="button" class="button">Nuevo Chat</button>
+            </div>
           </li>
           <li>
             <div class="contacto">
