--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Chat UI</title>
   </head>
   <body>
-    <section id="contactos">
+    <section class="contactos">
       <menu>
         <ul>
           <li>
@@ -140,7 +140,7 @@
         </ul>
       </menu>
     </section>
-    <section id="principal">
+    <section class="principal">
       <div class="img">
         <img src="./assets/img/hand.png" alt="imagen" />
         <h1>Comienza el Networking</h1>
