codigo finalizado antes de envio .

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400&family=Roboto:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
       integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw=="
@@ -74,7 +78,7 @@
                 />
               </div>
               <div class="info-contact">
-                <p class="name">Alejandra</p>
+                <p class="name">Victor</p>
                 <p class="status">Lorem ipsum dolor sit...</p>
               </div>
             </div>
@@ -89,7 +93,7 @@
                 />
               </div>
               <div class="info-contact">
-                <p class="name">Alejandra</p>
+                <p class="name">José Tómas</p>
                 <p class="status">Lorem ipsum dolor sit...</p>
               </div>
             </div>
@@ -103,7 +107,7 @@
                 />
               </div>
               <div class="info-contact">
-                <p class="name">Alejandra</p>
+                <p class="name">Marcela</p>
                 <p class="status">Lorem ipsum dolor sit...</p>
               </div>
             </div>
@@ -117,7 +121,7 @@
                 />
               </div>
               <div class="info-contact">
-                <p class="name">Alejandra</p>
+                <p class="name">Claudia</p>
                 <p class="status">Lorem ipsum dolor sit...</p>
               </div>
             </div>
@@ -132,7 +136,7 @@
                 />
               </div>
               <div class="info-contact">
-                <p class="name">Alejandra</p>
+                <p class="name">Victor</p>
                 <p class="status">Lorem ipsum dolor sit...</p>
               </div>
             </div>
@@ -144,8 +148,11 @@
       <div class="img">
         <img src="./assets/img/hand.png" alt="imagen" />
         <h1>Comienza el Networking</h1>
-        <h2>Presiona el botón “Nuevo chat” para comenzar a crear nuevas</h2>
-        <button>redes de contacto para tu empresa o emprendimiento.</button>
+        <h2>
+          Presiona el botón <strong>“Nuevo chat”</strong> para comenzar a crear
+          nuevas
+        </h2>
+        <p>redes de contacto para tu empresa o emprendimiento.</p>
       </div>
     </section>
   </body>
